--- a/5.html
+++ b/5.html
@@ -15,7 +15,10 @@
         .container {
             max-width: 800px;
             margin: auto;
-            background-color: white;
+            background-color: #f0f8ff; /* 临时背景颜色 */
+            background-image: url('images/background2.jpg'); /* 背景图像 */
+            background-size: cover;
+            background-position: center;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             position: relative;
@@ -27,6 +30,10 @@
         .content {
             text-align: justify;
             margin-bottom: 20px;
+        }
+        .highlight {
+            font-weight: bold;
+            color: #d9534f; /* 红色文本 */
         }
         .video-container {
             text-align: center;
