--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>超市页面 - 初始</title>
+    <title>今天你交粉红税了吗？</title>
     <style>
         body {
             margin: 0;
@@ -41,8 +41,8 @@
             left: 50%;
             transform: translateX(-50%);
             bottom: 20px;
-            width: 15vw;
-            height: 25vh;
+            width: 45vw;
+            height: 62vh;
         }
         .hidden {
             display: none;
