--- a/1.html
+++ b/1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>法律案例</title>
+    <title>不公对待：我和粉红税的故事</title>
     <style>
         body {
             margin: 0;
